tests/purs/failing/StandaloneKindSignatures4.out
Error found:
in module [33mMain[0m
at tests/purs/failing/StandaloneKindSignatures4.purs:7:24 - 7:29 (line 7, column 24 - line 7, column 29)

  Could not match kind
  [33m        [0m
  [33m  Symbol[0m
  [33m        [0m
  with kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m

while checking that type [33m"foo"[0m
  has kind [33mType[0m
while inferring the kind of [33mTo Int "foo"[0m
in type class instance
[33m               [0m
[33m  Main.To Int  [0m
[33m          "foo"[0m
[33m               [0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

